# content-forge

./: .gitignore  README.md  content_forge.py  pyproject.toml
content_forge/: __init__.py  cli.py  generator.py  licensing.py
tests/: test_licensing.py
